# cad-with-qwen3.5

./: .env.example  .gitignore  BACKEND_FUNCTIONALITY.md  BATCH_USAGE.md  CODE_REVIEW_FIXES_REPORT.md  Cargo.toml  Dockerfile  GRAY_RELEASE_GUIDE.md  README.md  config.toml.example
.github/workflows/: ci.yml
benches/: analysis_bench.rs
doc/: 后端功能介绍.md
frontend/: .prettierignore  .prettierrc.js  FINAL_REVIEW.md  README.md  REFACTOR_REPORT.md  REFACTOR_REPORT_ROUND2.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  api.test.js  main.js
frontend/src/components/: ChatSection.test.js  ChatSection.vue  LoadingSection.vue  ResultSection.test.js  ResultSection.vue  SettingsSection.vue  Toast.vue  UploadZone.test.js  UploadZone.vue
frontend/src/config/: constants.js
frontend/src/stores/: api.js  api.test.js  index.js  upload.js  upload.test.js
frontend/src/utils/: error.js  error.test.js  toast.js  toast.test.js
migrations/: 1__init.sql
scripts/: clean_env.bat  clean_env.sh  cleanup.sh
src/: app.rs  batch_main.rs  batch_result.rs  cache.rs  cli.rs  cli_main.rs  config.rs  db.rs  dialog.rs  error.rs  lib.rs  main.rs  metrics.rs  mock.rs  pdf_utils.rs  prompt.rs  recognition_validator.rs  security.rs  server_main.rs  telemetry.rs
src/application/: mod.rs
src/application/command/: mod.rs
src/application/service/: api_key_mgmt.rs  drawing_analysis.rs  mod.rs  quota_check.rs  template_classification.rs
src/batch/: circuit_breaker.rs  concurrency_controller.rs  dead_letter_queue.rs  merger.rs  mod.rs  planner.rs  progress.rs  session.rs  stream_processor.rs
src/domain/: mod.rs
src/domain/model/: api_key.rs  drawing.rs  mod.rs  user.rs
src/domain/service/: analysis.rs  auth.rs  mod.rs  pdf_conversion.rs  quota.rs  template_selection.rs
src/infrastructure/: confidence_handler.rs  mod.rs  pdf_conversion.rs  template_selection.rs  tests.rs
src/infrastructure/pdf_conversion/: pdf_converter.rs
src/infrastructure/template_selection/: hybrid_classifier.rs  multimodal_classifier.rs  rule_based_selector.rs  template_cache.rs
src/security/: path_middleware.rs
src/server/: admin.rs  auth.rs  e2e_test.rs  gray_release.rs  mod.rs  quota.rs  rate_limit.rs  types.rs  user_id.rs
src/tests/: mod.rs
templates/: prompt.toml  prompt_template.toml
templates/examples/: building_plan.md  custom.md  foundation.md  reinforcement.md  road_section.md  structure_plan.md
tests/: batch_test.rs  boundary_test.rs  integration_test.rs  middleware_test.rs  stress_test.rs  test_utils.rs
(+3 files in other folders)
