[package]
name = "cad_ocr"
version = "0.10.0"
edition = "2021"
description = "CAD Drawing Recognition - CLI and Web API"

[dependencies]
# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }
# Web 服务器
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = { version = "1.1", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"

# 环境变量
dotenvy = "0.15"

# 工具库
base64 = "0.21"
ctrlc = "3.4"
lru = "0.12"
thiserror = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"

# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }

# 进度条
indicatif = "0.17"

# 图片处理
image = "0.24"

# 速率限制
governor = "0.6"
nonzero_ext = "0.3"
dashmap = "5.5"

# JWT 认证
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Prometheus 指标
prometheus = "0.13"

# 数据库（用于埋点存储）
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"], optional = true }

# SHA256 哈希（用于 API Key 存储）
sha2 = "0.10"
hex = "0.4"

# 文件类型嗅探（用于 MIME 验证）
infer = "0.15"

# Mock 测试框架
mockall = "0.12"

# Futures 工具（用于 WAL 恢复）
futures = "0.3"

# Trait 异步方法
async-trait = "0.1"

# API 文档（OpenAPI/Swagger）
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

# 临时文件（PDF 转换用）
tempfile = "3.14"

# 压缩归档
flate2 = "1.0"
tar = "0.4"

# 正则表达式（用于乱码检测）
regex = "1.10"

# 测试
[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
futures = "0.3"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "analysis_bench"
harness = false

# 集成测试配置
[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "batch_test"
path = "tests/batch_test.rs"

[[test]]
name = "boundary_test"
path = "tests/boundary_test.rs"

[[test]]
name = "middleware_test"
path = "tests/middleware_test.rs"

[[test]]
name = "stress_test"
path = "tests/stress_test.rs"
required-features = ["with-sqlite"]

[features]
default = ["with-sqlite"]
with-sqlite = ["sqlx"]
pdf2image = []
# OCR 功能已移除：使用多模态模型（llava/qwen）替代，准确率更高且无需额外依赖
